--- a/galaxy/linux-hardened/.artixlinux/pkgbase.yaml
+++ b/galaxy/linux-hardened/.artixlinux/pkgbase.yaml
@@ -1,13 +1,4 @@
 ---
-pkgbase:
-  name: linux-hardened
-  version: 6.13.12.hardened1-2
-  arch:
-    - x86_64
-  pkgname:
-    - linux-hardened
-    - linux-hardened-headers
-    - linux-hardened-docs
 actions:
   addRepo: galaxy
   removeRepo: null
@@ -20,40 +11,52 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 6.13.12.hardened1-2
+    version: 6.14.6.hardened1-1
     packages:
-      - linux-hardened-6.13.12.hardened1-2-x86_64.pkg.tar.zst
-      - linux-hardened-headers-6.13.12.hardened1-2-x86_64.pkg.tar.zst
-      - linux-hardened-docs-6.13.12.hardened1-2-x86_64.pkg.tar.zst
+      - linux-hardened-6.14.6.hardened1-1-x86_64.pkg.tar.zst
+      - linux-hardened-headers-6.14.6.hardened1-1-x86_64.pkg.tar.zst
+      - linux-hardened-docs-6.14.6.hardened1-1-x86_64.pkg.tar.zst
+    debug: []
 team: galaxy
