--- a/galaxy/linux-hardened/config
+++ b/galaxy/linux-hardened/config
@@ -1,10 +1,10 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 6.13.12-hardened1 Kernel Configuration
+# Linux/x86 6.14.6-hardened1 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="gcc (GCC) 14.2.1 20250207"
+CONFIG_CC_VERSION_TEXT="gcc (GCC) 15.1.1 20250425"
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=140201
+CONFIG_GCC_VERSION=150101
 CONFIG_CLANG_VERSION=0
 CONFIG_AS_IS_GNU=y
 CONFIG_AS_VERSION=24400
@@ -21,8 +21,10 @@ CONFIG_CC_HAS_ASM_GOTO_TIED_OUTPUT=y
 CONFIG_TOOLS_SUPPORT_RELR=y
 CONFIG_CC_HAS_ASM_INLINE=y
 CONFIG_CC_HAS_NO_PROFILE_FN_ATTR=y
+CONFIG_CC_HAS_COUNTED_BY=y
 CONFIG_LD_CAN_USE_KEEP_IN_OVERLAY=y
-CONFIG_PAHOLE_VERSION=129
+CONFIG_RUSTC_HAS_COERCE_POINTEE=y
+CONFIG_PAHOLE_VERSION=130
 CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_TABLE_SORT=y
 CONFIG_THREAD_INFO_IN_TASK=y
@@ -141,6 +143,7 @@ CONFIG_PREEMPT_COUNT=y
 CONFIG_PREEMPTION=y
 CONFIG_PREEMPT_DYNAMIC=y
 CONFIG_SCHED_CORE=y
+CONFIG_SCHED_CLASS_EXT=y
 
 #
 # CPU/Task time and stats accounting
@@ -231,10 +234,12 @@ CONFIG_GROUP_SCHED_WEIGHT=y
 CONFIG_FAIR_GROUP_SCHED=y
 CONFIG_CFS_BANDWIDTH=y
 # CONFIG_RT_GROUP_SCHED is not set
+CONFIG_EXT_GROUP_SCHED=y
 CONFIG_SCHED_MM_CID=y
 CONFIG_UCLAMP_TASK_GROUP=y
 CONFIG_CGROUP_PIDS=y
 CONFIG_CGROUP_RDMA=y
+CONFIG_CGROUP_DMEM=y
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CGROUP_HUGETLB=y
 CONFIG_CPUSETS=y
@@ -321,6 +326,7 @@ CONFIG_PERF_EVENTS=y
 
 CONFIG_SYSTEM_DATA_VERIFICATION=y
 CONFIG_PROFILING=y
+# CONFIG_RUST is not set
 CONFIG_TRACEPOINTS=y
 
 #
@@ -742,6 +748,7 @@ CONFIG_PCI_XEN=y
 CONFIG_MMCONF_FAM10H=y
 CONFIG_ISA_DMA_API=y
 CONFIG_AMD_NB=y
+CONFIG_AMD_NODE=y
 # end of Bus options (PCI etc.)
 
 #
@@ -988,8 +995,7 @@ CONFIG_MODULE_FORCE_LOAD=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_MODULE_UNLOAD_TAINT_TRACKING=y
-CONFIG_MODVERSIONS=y
-CONFIG_ASM_MODVERSIONS=y
+# CONFIG_MODVERSIONS is not set
 CONFIG_MODULE_SRCVERSION_ALL=y
 CONFIG_MODULE_SIG=y
 # CONFIG_MODULE_SIG_FORCE is not set
@@ -1112,7 +1118,7 @@ CONFIG_COREDUMP=y
 CONFIG_ZPOOL=y
 CONFIG_SWAP=y
 CONFIG_ZSWAP=y
-# CONFIG_ZSWAP_DEFAULT_ON is not set
+CONFIG_ZSWAP_DEFAULT_ON=y
 CONFIG_ZSWAP_SHRINKER_DEFAULT_ON=y
 # CONFIG_ZSWAP_COMPRESSOR_DEFAULT_DEFLATE is not set
 # CONFIG_ZSWAP_COMPRESSOR_DEFAULT_LZO is not set
@@ -1161,7 +1167,10 @@ CONFIG_HAVE_BOOTMEM_INFO_NODE=y
 CONFIG_ARCH_ENABLE_MEMORY_HOTPLUG=y
 CONFIG_ARCH_ENABLE_MEMORY_HOTREMOVE=y
 CONFIG_MEMORY_HOTPLUG=y
-CONFIG_MEMORY_HOTPLUG_DEFAULT_ONLINE=y
+# CONFIG_MHP_DEFAULT_ONLINE_TYPE_OFFLINE is not set
+CONFIG_MHP_DEFAULT_ONLINE_TYPE_ONLINE_AUTO=y
+# CONFIG_MHP_DEFAULT_ONLINE_TYPE_ONLINE_KERNEL is not set
+# CONFIG_MHP_DEFAULT_ONLINE_TYPE_ONLINE_MOVABLE is not set
 CONFIG_MEMORY_HOTREMOVE=y
 CONFIG_MHP_MEMMAP_ON_MEMORY=y
 CONFIG_ARCH_MHP_MEMMAP_ON_MEMORY_ENABLE=y
@@ -1245,6 +1254,8 @@ CONFIG_EXECMEM=y
 CONFIG_NUMA_MEMBLKS=y
 # CONFIG_NUMA_EMU is not set
 CONFIG_ARCH_HAS_USER_SHADOW_STACK=y
+CONFIG_ARCH_SUPPORTS_PT_RECLAIM=y
+CONFIG_PT_RECLAIM=y
 
 #
 # Data Access Monitoring
@@ -1253,7 +1264,6 @@ CONFIG_DAMON=y
 CONFIG_DAMON_VADDR=y
 CONFIG_DAMON_PADDR=y
 CONFIG_DAMON_SYSFS=y
-# CONFIG_DAMON_DBGFS_DEPRECATED is not set
 CONFIG_DAMON_RECLAIM=y
 CONFIG_DAMON_LRU_SORT=y
 # end of Data Access Monitoring
@@ -1295,6 +1305,7 @@ CONFIG_XFRM_ESP=m
 CONFIG_XFRM_IPCOMP=m
 CONFIG_NET_KEY=m
 CONFIG_NET_KEY_MIGRATE=y
+CONFIG_XFRM_IPTFS=m
 CONFIG_XFRM_ESPINTCP=y
 CONFIG_SMC=m
 CONFIG_SMC_DIAG=m
@@ -2055,6 +2066,7 @@ CONFIG_BT_MTK=m
 CONFIG_BT_HCIBTUSB=m
 CONFIG_BT_HCIBTUSB_AUTOSUSPEND=y
 CONFIG_BT_HCIBTUSB_POLL_SYNC=y
+CONFIG_BT_HCIBTUSB_AUTO_ISOC_ALT=y
 CONFIG_BT_HCIBTUSB_BCM=y
 CONFIG_BT_HCIBTUSB_MTK=y
 CONFIG_BT_HCIBTUSB_RTL=y
@@ -2734,10 +2746,10 @@ CONFIG_DW_XDATA_PCIE=m
 CONFIG_PCI_ENDPOINT_TEST=m
 CONFIG_XILINX_SDFEC=m
 CONFIG_MISC_RTSX=m
+CONFIG_NTSYNC=m
 CONFIG_TPS6594_ESM=m
 CONFIG_TPS6594_PFSM=m
 CONFIG_NSM=m
-# CONFIG_MCHP_LAN966X_PCI is not set
 CONFIG_C2PORT=m
 CONFIG_C2PORT_DURAMAR_2150=m
 
@@ -3667,6 +3679,7 @@ CONFIG_MICREL_PHY=m
 CONFIG_MICROCHIP_T1S_PHY=m
 CONFIG_MICROCHIP_PHY=m
 CONFIG_MICROCHIP_T1_PHY=m
+CONFIG_MICROCHIP_PHY_RDS_PTP=m
 CONFIG_MICROSEMI_PHY=m
 CONFIG_MOTORCOMM_PHY=m
 CONFIG_NATIONAL_PHY=m
@@ -3680,6 +3693,7 @@ CONFIG_QCA83XX_PHY=m
 CONFIG_QCA808X_PHY=m
 CONFIG_QSEMI_PHY=m
 CONFIG_REALTEK_PHY=m
+CONFIG_REALTEK_PHY_HWMON=y
 CONFIG_RENESAS_PHY=m
 # CONFIG_ROCKCHIP_PHY is not set
 CONFIG_SMSC_PHY=m
@@ -4150,6 +4164,7 @@ CONFIG_RTW88_8821AU=m
 CONFIG_RTW88_8812AU=m
 CONFIG_RTW88_DEBUG=y
 CONFIG_RTW88_DEBUGFS=y
+CONFIG_RTW88_LEDS=y
 CONFIG_RTW89=m
 CONFIG_RTW89_CORE=m
 CONFIG_RTW89_PCI=m
@@ -4270,7 +4285,6 @@ CONFIG_INPUT_MOUSEDEV_SCREEN_X=1024
 CONFIG_INPUT_MOUSEDEV_SCREEN_Y=768
 CONFIG_INPUT_JOYDEV=m
 CONFIG_INPUT_EVDEV=y
-# CONFIG_INPUT_EVBUG is not set
 
 #
 # Input Device Drivers
@@ -4554,6 +4568,7 @@ CONFIG_INPUT_SOC_BUTTON_ARRAY=m
 CONFIG_INPUT_DRV260X_HAPTICS=m
 CONFIG_INPUT_DRV2665_HAPTICS=m
 CONFIG_INPUT_DRV2667_HAPTICS=m
+CONFIG_INPUT_QNAP_MCU=m
 CONFIG_INPUT_RAVE_SP_PWRBUTTON=m
 CONFIG_INPUT_RT5120_PWRKEY=m
 CONFIG_RMI4_CORE=m
@@ -4689,7 +4704,7 @@ CONFIG_SERIAL_DEV_CTRL_TTYPORT=y
 CONFIG_PRINTER=m
 CONFIG_LP_CONSOLE=y
 CONFIG_PPDEV=m
-CONFIG_VIRTIO_CONSOLE=m
+CONFIG_VIRTIO_CONSOLE=y
 CONFIG_IPMI_HANDLER=m
 CONFIG_IPMI_DMI_DECODE=y
 CONFIG_IPMI_PLAT_DATA=y
@@ -4884,6 +4899,7 @@ CONFIG_SPI_GPIO=m
 CONFIG_SPI_INTEL=m
 CONFIG_SPI_INTEL_PCI=m
 CONFIG_SPI_INTEL_PLATFORM=m
+CONFIG_SPI_KSPI2=m
 CONFIG_SPI_LM70_LLP=m
 CONFIG_SPI_LJCA=m
 CONFIG_SPI_MICROCHIP_CORE=m
@@ -4928,10 +4944,8 @@ CONFIG_PPS_CLIENT_KTIMER=m
 CONFIG_PPS_CLIENT_LDISC=m
 CONFIG_PPS_CLIENT_PARPORT=m
 CONFIG_PPS_CLIENT_GPIO=m
-
-#
-# PPS generators support
-#
+CONFIG_PPS_GENERATOR=m
+# CONFIG_PPS_GENERATOR_DUMMY is not set
 
 #
 # PTP clock support
@@ -5263,6 +5277,7 @@ CONFIG_CHARGER_RT9471=m
 CONFIG_CHARGER_CROS_USBPD=m
 CONFIG_CHARGER_CROS_PCHG=m
 CONFIG_CHARGER_CROS_CONTROL=m
+CONFIG_FUEL_GAUGE_STC3117=m
 CONFIG_CHARGER_BD99954=m
 CONFIG_CHARGER_WILCO=m
 CONFIG_BATTERY_SURFACE=m
@@ -5424,6 +5439,7 @@ CONFIG_SENSORS_ADM1275=m
 CONFIG_SENSORS_ADP1050=m
 CONFIG_SENSORS_BEL_PFE=m
 CONFIG_SENSORS_BPA_RS600=m
+CONFIG_SENSORS_CRPS=m
 CONFIG_SENSORS_DELTA_AHE50DC_FAN=m
 CONFIG_SENSORS_FSP_3Y=m
 CONFIG_SENSORS_IBM_CFFPS=m
@@ -5472,6 +5488,8 @@ CONFIG_SENSORS_Q54SJ108A2=m
 CONFIG_SENSORS_STPDDC60=m
 CONFIG_SENSORS_TDA38640=m
 CONFIG_SENSORS_TDA38640_REGULATOR=y
+CONFIG_SENSORS_TPS25990=m
+CONFIG_SENSORS_TPS25990_REGULATOR=y
 CONFIG_SENSORS_TPS40422=m
 CONFIG_SENSORS_TPS53679=m
 CONFIG_SENSORS_TPS546D24=m
@@ -5484,6 +5502,7 @@ CONFIG_SENSORS_XDPE122_REGULATOR=y
 CONFIG_SENSORS_ZL6100=m
 CONFIG_SENSORS_PT5161L=m
 CONFIG_SENSORS_PWM_FAN=m
+CONFIG_SENSORS_QNAP_MCU_HWMON=m
 CONFIG_SENSORS_SBTSI=m
 CONFIG_SENSORS_SBRMI=m
 CONFIG_SENSORS_SHT15=m
@@ -5860,6 +5879,8 @@ CONFIG_RAVE_SP_CORE=m
 CONFIG_MFD_INTEL_M10_BMC_CORE=m
 CONFIG_MFD_INTEL_M10_BMC_SPI=m
 CONFIG_MFD_INTEL_M10_BMC_PMCI=m
+CONFIG_MFD_QNAP_MCU=m
+CONFIG_MFD_UPBOARD_FPGA=m
 # end of Multifunction device drivers
 
 CONFIG_REGULATOR=y
@@ -6863,6 +6884,7 @@ CONFIG_DRM_MIPI_DBI=m
 CONFIG_DRM_MIPI_DSI=y
 # CONFIG_DRM_DEBUG_MM is not set
 CONFIG_DRM_KMS_HELPER=y
+CONFIG_DRM_DRAW=y
 CONFIG_DRM_PANIC=y
 CONFIG_DRM_PANIC_FOREGROUND_COLOR=0xffffff
 CONFIG_DRM_PANIC_BACKGROUND_COLOR=0x0000aa
@@ -6878,6 +6900,10 @@ CONFIG_DRM_CLIENT_SETUP=y
 #
 CONFIG_DRM_FBDEV_EMULATION=y
 CONFIG_DRM_FBDEV_OVERALLOC=100
+CONFIG_DRM_CLIENT_LOG=y
+CONFIG_DRM_CLIENT_DEFAULT_FBDEV=y
+# CONFIG_DRM_CLIENT_DEFAULT_LOG is not set
+CONFIG_DRM_CLIENT_DEFAULT="fbdev"
 # end of Supported DRM clients
 
 CONFIG_DRM_LOAD_EDID_FIRMWARE=y
@@ -7010,6 +7036,7 @@ CONFIG_DRM_ANALOGIX_DP=m
 # end of Display Interface Bridges
 
 # CONFIG_DRM_ETNAVIV is not set
+CONFIG_DRM_HISI_HIBMC=m
 CONFIG_DRM_BOCHS=m
 CONFIG_DRM_CIRRUS_QEMU=m
 CONFIG_DRM_GM12U320=m
@@ -7183,6 +7210,7 @@ CONFIG_FRAMEBUFFER_CONSOLE_DEFERRED_TAKEOVER=y
 # end of Graphics support
 
 CONFIG_DRM_ACCEL=y
+CONFIG_DRM_ACCEL_AMDXDNA=m
 CONFIG_DRM_ACCEL_HABANALABS=m
 CONFIG_DRM_ACCEL_IVPU=m
 # CONFIG_DRM_ACCEL_IVPU_DEBUG is not set
@@ -7350,6 +7378,7 @@ CONFIG_SND_HDA_SCODEC_CS35L56=m
 CONFIG_SND_HDA_SCODEC_CS35L56_I2C=m
 CONFIG_SND_HDA_SCODEC_CS35L56_SPI=m
 CONFIG_SND_HDA_SCODEC_TAS2781_I2C=m
+CONFIG_SND_HDA_SCODEC_TAS2781_SPI=m
 CONFIG_SND_HDA_CODEC_REALTEK=m
 CONFIG_SND_HDA_CODEC_ANALOG=m
 CONFIG_SND_HDA_CODEC_SIGMATEL=m
@@ -8122,14 +8151,6 @@ CONFIG_HID_MCP2221=m
 CONFIG_HID_BPF=y
 # end of HID-BPF support
 
-#
-# USB HID support
-#
-CONFIG_USB_HID=m
-CONFIG_HID_PID=y
-CONFIG_USB_HIDDEV=y
-# end of USB HID support
-
 CONFIG_I2C_HID=m
 CONFIG_I2C_HID_ACPI=m
 CONFIG_I2C_HID_OF=m
@@ -8156,6 +8177,23 @@ CONFIG_SURFACE_KBD=m
 # end of Surface System Aggregator Module HID support
 
 CONFIG_SURFACE_HID_CORE=m
+
+#
+# Intel THC HID Support
+#
+CONFIG_INTEL_THC_HID=m
+CONFIG_INTEL_QUICKSPI=m
+CONFIG_INTEL_QUICKI2C=m
+# end of Intel THC HID Support
+
+#
+# USB HID support
+#
+CONFIG_USB_HID=m
+CONFIG_HID_PID=y
+CONFIG_USB_HIDDEV=y
+# end of USB HID support
+
 CONFIG_USB_OHCI_LITTLE_ENDIAN=y
 CONFIG_USB_SUPPORT=y
 CONFIG_USB_COMMON=y
@@ -8221,11 +8259,7 @@ CONFIG_USB_WDM=m
 CONFIG_USB_TMC=m
 
 #
-# NOTE: USB_STORAGE depends on SCSI but BLK_DEV_SD may
-#
-
-#
-# also be needed; see USB_STORAGE Help for more info
+# NOTE: USB_STORAGE depends on SCSI but BLK_DEV_SD may also be needed; see USB_STORAGE Help for more info
 #
 CONFIG_USB_STORAGE=m
 # CONFIG_USB_STORAGE_DEBUG is not set
@@ -8393,6 +8427,7 @@ CONFIG_TYPEC_UCSI=m
 CONFIG_UCSI_CCG=m
 CONFIG_UCSI_ACPI=m
 CONFIG_UCSI_STM32G0=m
+CONFIG_CROS_EC_UCSI=m
 CONFIG_TYPEC_TPS6598X=m
 CONFIG_TYPEC_ANX7411=m
 CONFIG_TYPEC_RT1719=m
@@ -8419,6 +8454,7 @@ CONFIG_TYPEC_MUX_WCD939X_USBSS=m
 #
 CONFIG_TYPEC_DP_ALTMODE=m
 CONFIG_TYPEC_NVIDIA_ALTMODE=m
+CONFIG_TYPEC_TBT_ALTMODE=m
 # end of USB Type-C Alternate Mode drivers
 
 CONFIG_USB_ROLE_SWITCH=m
@@ -8515,6 +8551,7 @@ CONFIG_LEDS_PCA955X=m
 CONFIG_LEDS_PCA955X_GPIO=y
 CONFIG_LEDS_PCA963X=m
 CONFIG_LEDS_PCA995X=m
+CONFIG_LEDS_QNAP_MCU=m
 CONFIG_LEDS_WM831X_STATUS=m
 CONFIG_LEDS_WM8350=m
 CONFIG_LEDS_DA903X=m
@@ -8534,6 +8571,7 @@ CONFIG_LEDS_MAX8997=m
 CONFIG_LEDS_LM355x=m
 CONFIG_LEDS_MENF21BMC=m
 CONFIG_LEDS_IS31FL319X=m
+CONFIG_LEDS_UPBOARD=m
 
 #
 # LED driver for blink(1) USB RGB LED is under Special HID drivers (HID_THINGM)
@@ -8844,8 +8882,9 @@ CONFIG_INTEL_IOATDMA=m
 CONFIG_PLX_DMA=m
 CONFIG_XILINX_DMA=m
 CONFIG_XILINX_XDMA=m
-CONFIG_AMD_QDMA=m
+CONFIG_AMD_AE4DMA=m
 CONFIG_AMD_PTDMA=m
+CONFIG_AMD_QDMA=m
 CONFIG_QCOM_HIDMA_MGMT=m
 CONFIG_QCOM_HIDMA=m
 CONFIG_DW_DMAC_CORE=y
@@ -9114,6 +9153,7 @@ CONFIG_CROS_EC_LIGHTBAR=m
 CONFIG_CROS_EC_DEBUGFS=m
 CONFIG_CROS_EC_SENSORHUB=m
 CONFIG_CROS_EC_SYSFS=m
+CONFIG_CROS_EC_TYPEC_ALTMODES=y
 CONFIG_CROS_EC_TYPEC=m
 CONFIG_CROS_HPS_I2C=m
 CONFIG_CROS_USBPD_LOGGER=m
@@ -9835,6 +9875,7 @@ CONFIG_AD7293=m
 CONFIG_AD7303=m
 CONFIG_AD8460=m
 CONFIG_AD8801=m
+CONFIG_BD79703=m
 CONFIG_DPOT_DAC=m
 CONFIG_DS4424=m
 CONFIG_LTC1660=m
@@ -10019,7 +10060,6 @@ CONFIG_ISL76682=m
 CONFIG_HID_SENSOR_ALS=m
 CONFIG_HID_SENSOR_PROX=m
 CONFIG_JSA1212=m
-CONFIG_ROHM_BU27008=m
 CONFIG_ROHM_BU27034=m
 CONFIG_RPR0521=m
 CONFIG_SENSORS_LM3533=m
@@ -10032,6 +10072,7 @@ CONFIG_MAX44009=m
 CONFIG_NOA1305=m
 CONFIG_OPT3001=m
 CONFIG_OPT4001=m
+CONFIG_OPT4060=m
 CONFIG_PA12203001=m
 CONFIG_SI1133=m
 CONFIG_SI1145=m
@@ -10439,14 +10480,14 @@ CONFIG_BUFFER_HEAD=y
 CONFIG_LEGACY_DIRECT_IO=y
 # CONFIG_EXT2_FS is not set
 # CONFIG_EXT3_FS is not set
-CONFIG_EXT4_FS=m
+CONFIG_EXT4_FS=y
 CONFIG_EXT4_USE_FOR_EXT2=y
 CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
 # CONFIG_EXT4_DEBUG is not set
-CONFIG_JBD2=m
+CONFIG_JBD2=y
 # CONFIG_JBD2_DEBUG is not set
-CONFIG_FS_MBCACHE=m
+CONFIG_FS_MBCACHE=y
 CONFIG_JFS_FS=m
 CONFIG_JFS_POSIX_ACL=y
 CONFIG_JFS_SECURITY=y
@@ -10473,7 +10514,7 @@ CONFIG_OCFS2_FS_O2CB=m
 CONFIG_OCFS2_FS_STATS=y
 CONFIG_OCFS2_DEBUG_MASKLOG=y
 # CONFIG_OCFS2_DEBUG_FS is not set
-CONFIG_BTRFS_FS=m
+CONFIG_BTRFS_FS=y
 CONFIG_BTRFS_FS_POSIX_ACL=y
 # CONFIG_BTRFS_FS_RUN_SANITY_TESTS is not set
 # CONFIG_BTRFS_DEBUG is not set
@@ -10514,7 +10555,7 @@ CONFIG_EXPORTFS=y
 CONFIG_EXPORTFS_BLOCK_OPS=y
 CONFIG_FILE_LOCKING=y
 CONFIG_FS_ENCRYPTION=y
-CONFIG_FS_ENCRYPTION_ALGS=m
+CONFIG_FS_ENCRYPTION_ALGS=y
 CONFIG_FS_ENCRYPTION_INLINE_CRYPT=y
 CONFIG_FS_VERITY=y
 CONFIG_FS_VERITY_BUILTIN_SIGNATURES=y
@@ -10536,6 +10577,7 @@ CONFIG_CUSE=m
 CONFIG_VIRTIO_FS=y
 CONFIG_FUSE_DAX=y
 CONFIG_FUSE_PASSTHROUGH=y
+CONFIG_FUSE_IO_URING=y
 CONFIG_OVERLAY_FS=m
 CONFIG_OVERLAY_FS_REDIRECT_DIR=y
 # CONFIG_OVERLAY_FS_REDIRECT_ALWAYS_FOLLOW is not set
@@ -10583,7 +10625,7 @@ CONFIG_NTFS3_FS=m
 # CONFIG_NTFS3_64BIT_CLUSTER is not set
 CONFIG_NTFS3_LZX_XPRESS=y
 CONFIG_NTFS3_FS_POSIX_ACL=y
-# CONFIG_NTFS_FS is not set
+CONFIG_NTFS_FS=m
 # end of DOS/FAT/EXFAT/NT Filesystems
 
 #
@@ -10737,6 +10779,7 @@ CONFIG_NFSD_SCSILAYOUT=y
 CONFIG_NFSD_V4_2_INTER_SSC=y
 CONFIG_NFSD_V4_SECURITY_LABEL=y
 # CONFIG_NFSD_LEGACY_CLIENT_TRACKING is not set
+# CONFIG_NFSD_V4_DELEG_TIMESTAMPS is not set
 CONFIG_GRACE_PERIOD=m
 CONFIG_LOCKD=m
 CONFIG_LOCKD_V4=y
@@ -10865,6 +10908,7 @@ CONFIG_PROC_MEM_FORCE_PTRACE=y
 CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_SECURITY_TIOCSTI_RESTRICT=y
 CONFIG_SECURITY=y
+CONFIG_HAS_SECURITY_AUDIT=y
 CONFIG_SECURITYFS=y
 CONFIG_SECURITY_NETWORK=y
 CONFIG_SECURITY_INFINIBAND=y
@@ -10975,15 +11019,13 @@ CONFIG_LIST_HARDENED=y
 CONFIG_BUG_ON_DATA_CORRUPTION=y
 # end of Hardening of kernel data structures
 
-# CONFIG_RANDSTRUCT_NONE is not set
-CONFIG_RANDSTRUCT_FULL=y
+CONFIG_RANDSTRUCT_NONE=y
+# CONFIG_RANDSTRUCT_FULL is not set
 # CONFIG_RANDSTRUCT_PERFORMANCE is not set
-CONFIG_RANDSTRUCT=y
-CONFIG_GCC_PLUGIN_RANDSTRUCT=y
 # end of Kernel hardening options
 # end of Security options
 
-CONFIG_XOR_BLOCKS=m
+CONFIG_XOR_BLOCKS=y
 CONFIG_ASYNC_CORE=m
 CONFIG_ASYNC_MEMCPY=m
 CONFIG_ASYNC_XOR=m
@@ -11070,7 +11112,6 @@ CONFIG_CRYPTO_CTR=y
 CONFIG_CRYPTO_CTS=m
 CONFIG_CRYPTO_ECB=y
 CONFIG_CRYPTO_HCTR2=m
-CONFIG_CRYPTO_KEYWRAP=m
 CONFIG_CRYPTO_LRW=m
 CONFIG_CRYPTO_PCBC=m
 CONFIG_CRYPTO_XCTR=m
@@ -11094,7 +11135,7 @@ CONFIG_CRYPTO_ESSIV=m
 #
 # Hashes, digests, and MACs
 #
-CONFIG_CRYPTO_BLAKE2B=m
+CONFIG_CRYPTO_BLAKE2B=y
 CONFIG_CRYPTO_CMAC=m
 CONFIG_CRYPTO_GHASH=m
 CONFIG_CRYPTO_HMAC=y
@@ -11111,16 +11152,15 @@ CONFIG_CRYPTO_SHA3=y
 CONFIG_CRYPTO_SM3=m
 CONFIG_CRYPTO_SM3_GENERIC=m
 CONFIG_CRYPTO_STREEBOG=m
-CONFIG_CRYPTO_VMAC=m
 CONFIG_CRYPTO_WP512=m
 CONFIG_CRYPTO_XCBC=m
-CONFIG_CRYPTO_XXHASH=m
+CONFIG_CRYPTO_XXHASH=y
 # end of Hashes, digests, and MACs
 
 #
 # CRCs (cyclic redundancy checks)
 #
-CONFIG_CRYPTO_CRC32C=m
+CONFIG_CRYPTO_CRC32C=y
 CONFIG_CRYPTO_CRC32=m
 CONFIG_CRYPTO_CRCT10DIF=y
 CONFIG_CRYPTO_CRC64_ROCKSOFT=y
@@ -11202,9 +11242,6 @@ CONFIG_CRYPTO_SHA256_SSSE3=m
 CONFIG_CRYPTO_SHA512_SSSE3=m
 CONFIG_CRYPTO_SM3_AVX_X86_64=m
 CONFIG_CRYPTO_GHASH_CLMUL_NI_INTEL=m
-CONFIG_CRYPTO_CRC32C_INTEL=m
-CONFIG_CRYPTO_CRC32_PCLMUL=m
-CONFIG_CRYPTO_CRCT10DIF_PCLMUL=m
 # end of Accelerated Cryptographic Algorithms for CPU (x86)
 
 CONFIG_CRYPTO_HW=y
@@ -11271,7 +11308,7 @@ CONFIG_BINARY_PRINTF=y
 #
 # Library routines
 #
-CONFIG_RAID6_PQ=m
+CONFIG_RAID6_PQ=y
 # CONFIG_RAID6_PQ_BENCHMARK is not set
 CONFIG_LINEAR_RANGES=y
 CONFIG_PACKING=y
@@ -11293,21 +11330,24 @@ CONFIG_ARCH_USE_SYM_ANNOTATIONS=y
 CONFIG_CRYPTO_LIB_UTILS=y
 CONFIG_CRYPTO_LIB_AES=y
 CONFIG_CRYPTO_LIB_AESCFB=y
-CONFIG_CRYPTO_LIB_AESGCM=m
+CONFIG_CRYPTO_LIB_AESGCM=y
 CONFIG_CRYPTO_LIB_ARC4=m
-CONFIG_CRYPTO_LIB_GF128MUL=m
+CONFIG_CRYPTO_LIB_GF128MUL=y
 CONFIG_CRYPTO_ARCH_HAVE_LIB_BLAKE2S=y
 CONFIG_CRYPTO_LIB_BLAKE2S_GENERIC=y
-CONFIG_CRYPTO_ARCH_HAVE_LIB_CHACHA=m
+CONFIG_CRYPTO_ARCH_HAVE_LIB_CHACHA=y
 CONFIG_CRYPTO_LIB_CHACHA_GENERIC=m
+CONFIG_CRYPTO_LIB_CHACHA_INTERNAL=m
 CONFIG_CRYPTO_LIB_CHACHA=m
-CONFIG_CRYPTO_ARCH_HAVE_LIB_CURVE25519=m
+CONFIG_CRYPTO_ARCH_HAVE_LIB_CURVE25519=y
 CONFIG_CRYPTO_LIB_CURVE25519_GENERIC=m
+CONFIG_CRYPTO_LIB_CURVE25519_INTERNAL=m
 CONFIG_CRYPTO_LIB_CURVE25519=m
 CONFIG_CRYPTO_LIB_DES=m
 CONFIG_CRYPTO_LIB_POLY1305_RSIZE=11
-CONFIG_CRYPTO_ARCH_HAVE_LIB_POLY1305=m
+CONFIG_CRYPTO_ARCH_HAVE_LIB_POLY1305=y
 CONFIG_CRYPTO_LIB_POLY1305_GENERIC=m
+CONFIG_CRYPTO_LIB_POLY1305_INTERNAL=m
 CONFIG_CRYPTO_LIB_POLY1305=m
 CONFIG_CRYPTO_LIB_CHACHA20POLY1305=m
 CONFIG_CRYPTO_LIB_SHA1=y
@@ -11315,21 +11355,21 @@ CONFIG_CRYPTO_LIB_SHA256=y
 # end of Crypto library routines
 
 CONFIG_CRC_CCITT=y
-CONFIG_CRC16=m
+CONFIG_CRC16=y
 CONFIG_CRC_T10DIF=y
+CONFIG_ARCH_HAS_CRC_T10DIF=y
+CONFIG_CRC_T10DIF_ARCH=y
 CONFIG_CRC64_ROCKSOFT=y
 CONFIG_CRC_ITU_T=m
 CONFIG_CRC32=y
-# CONFIG_CRC32_SELFTEST is not set
-CONFIG_CRC32_SLICEBY8=y
-# CONFIG_CRC32_SLICEBY4 is not set
-# CONFIG_CRC32_SARWATE is not set
-# CONFIG_CRC32_BIT is not set
+CONFIG_ARCH_HAS_CRC32=y
+CONFIG_CRC32_ARCH=y
 CONFIG_CRC64=y
 CONFIG_CRC4=m
 CONFIG_CRC7=m
-CONFIG_LIBCRC32C=m
+CONFIG_LIBCRC32C=y
 CONFIG_CRC8=m
+CONFIG_CRC_OPTIMIZATIONS=y
 CONFIG_XXHASH=y
 # CONFIG_RANDOM32_SELFTEST is not set
 CONFIG_842_COMPRESS=m
@@ -11489,11 +11529,23 @@ CONFIG_DEBUG_MISC=y
 #
 # Compile-time checks and compiler options
 #
+CONFIG_DEBUG_INFO=y
 CONFIG_AS_HAS_NON_CONST_ULEB128=y
-CONFIG_DEBUG_INFO_NONE=y
+# CONFIG_DEBUG_INFO_NONE is not set
 # CONFIG_DEBUG_INFO_DWARF_TOOLCHAIN_DEFAULT is not set
 # CONFIG_DEBUG_INFO_DWARF4 is not set
-# CONFIG_DEBUG_INFO_DWARF5 is not set
+CONFIG_DEBUG_INFO_DWARF5=y
+# CONFIG_DEBUG_INFO_REDUCED is not set
+CONFIG_DEBUG_INFO_COMPRESSED_NONE=y
+# CONFIG_DEBUG_INFO_COMPRESSED_ZLIB is not set
+# CONFIG_DEBUG_INFO_COMPRESSED_ZSTD is not set
+# CONFIG_DEBUG_INFO_SPLIT is not set
+CONFIG_DEBUG_INFO_BTF=y
+CONFIG_PAHOLE_HAS_SPLIT_BTF=y
+CONFIG_PAHOLE_HAS_LANG_EXCLUDE=y
+CONFIG_DEBUG_INFO_BTF_MODULES=y
+# CONFIG_MODULE_ALLOW_BTF_MISMATCH is not set
+CONFIG_GDB_SCRIPTS=y
 CONFIG_FRAME_WARN=2048
 CONFIG_STRIP_ASM_SYMS=y
 # CONFIG_READABLE_ASM is not set
@@ -11686,11 +11738,13 @@ CONFIG_HAVE_RETHOOK=y
 CONFIG_RETHOOK=y
 CONFIG_HAVE_FUNCTION_TRACER=y
 CONFIG_HAVE_FUNCTION_GRAPH_TRACER=y
-CONFIG_HAVE_FUNCTION_GRAPH_RETVAL=y
+CONFIG_HAVE_FUNCTION_GRAPH_FREGS=y
+CONFIG_HAVE_FTRACE_GRAPH_FUNC=y
 CONFIG_HAVE_DYNAMIC_FTRACE=y
 CONFIG_HAVE_DYNAMIC_FTRACE_WITH_REGS=y
 CONFIG_HAVE_DYNAMIC_FTRACE_WITH_DIRECT_CALLS=y
 CONFIG_HAVE_DYNAMIC_FTRACE_WITH_ARGS=y
+CONFIG_HAVE_FTRACE_REGS_HAVING_PT_REGS=y
 CONFIG_HAVE_DYNAMIC_FTRACE_NO_PATCHABLE=y
 CONFIG_HAVE_FTRACE_MCOUNT_RECORD=y
 CONFIG_HAVE_SYSCALL_TRACEPOINTS=y
@@ -11735,6 +11789,7 @@ CONFIG_BRANCH_PROFILE_NONE=y
 # CONFIG_PROFILE_ANNOTATED_BRANCHES is not set
 CONFIG_BLK_DEV_IO_TRACE=y
 CONFIG_FPROBE_EVENTS=y
+CONFIG_PROBE_EVENTS_BTF_ARGS=y
 CONFIG_KPROBE_EVENTS=y
 # CONFIG_KPROBE_EVENTS_ON_NOTRACE is not set
 CONFIG_UPROBE_EVENTS=y
