--- a/world/flatpak/.artixlinux/pkgbase.yaml
+++ b/world/flatpak/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: flatpak
-  version: 1:1.16.0-3
-  arch:
-    - x86_64
-  pkgname:
-    - flatpak
-    - flatpak-docs
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1:1.16.0-3
+    version: 1:1.16.1-1
     packages:
-      - flatpak-1:1.16.0-3-x86_64.pkg.tar.zst
-      - flatpak-docs-1:1.16.0-3-x86_64.pkg.tar.zst
+      - flatpak-1:1.16.1-1-x86_64.pkg.tar.zst
+      - flatpak-docs-1:1.16.1-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
