--- a/world/gamescope/.artixlinux/pkgbase.yaml
+++ b/world/gamescope/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -29,9 +29,9 @@ repos:
     packages: []
     debug: []
   world:
-    version: 3.16.4-1
+    version: 3.16.5-1
     packages:
-      - gamescope-3.16.4-1-x86_64.pkg.tar.zst
+      - gamescope-3.16.5-1-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
