--- a/world/gtk4/.artixlinux/pkgbase.yaml
+++ b/world/gtk4/.artixlinux/pkgbase.yaml
@@ -1,61 +1,63 @@
 ---
-pkgbase:
-  name: gtk4
-  version: 1:4.18.5-1
-  arch:
-    - x86_64
-  pkgname:
-    - gtk4
-    - gtk4-demos
-    - gtk4-docs
-    - gtk-update-icon-cache
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1:4.18.5-1
+    version: 1:4.18.5-2
     packages:
-      - gtk4-1:4.18.5-1-x86_64.pkg.tar.zst
-      - gtk4-demos-1:4.18.5-1-x86_64.pkg.tar.zst
-      - gtk4-docs-1:4.18.5-1-x86_64.pkg.tar.zst
-      - gtk-update-icon-cache-1:4.18.5-1-x86_64.pkg.tar.zst
+      - gtk4-1:4.18.5-2-x86_64.pkg.tar.zst
+      - gtk4-demos-1:4.18.5-2-x86_64.pkg.tar.zst
+      - gtk4-docs-1:4.18.5-2-x86_64.pkg.tar.zst
+      - gtk-update-icon-cache-1:4.18.5-2-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
