--- a/world/gtk3/.artixlinux/pkgbase.yaml
+++ b/world/gtk3/.artixlinux/pkgbase.yaml
@@ -1,13 +1,4 @@
 ---
-pkgbase:
-  name: gtk3
-  version: 1:3.24.49-1
-  arch:
-    - x86_64
-  pkgname:
-    - gtk3
-    - gtk3-demos
-    - gtk3-docs
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -20,40 +11,52 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1:3.24.49-1
+    version: 1:3.24.49-2
     packages:
-      - gtk3-1:3.24.49-1-x86_64.pkg.tar.zst
-      - gtk3-demos-1:3.24.49-1-x86_64.pkg.tar.zst
-      - gtk3-docs-1:3.24.49-1-x86_64.pkg.tar.zst
+      - gtk3-1:3.24.49-2-x86_64.pkg.tar.zst
+      - gtk3-demos-1:3.24.49-2-x86_64.pkg.tar.zst
+      - gtk3-docs-1:3.24.49-2-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
