--- a/world/snowball/.artixlinux/pkgbase.yaml
+++ b/world/snowball/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -29,10 +29,10 @@ repos:
     packages: []
     debug: []
   world:
-    version: 2.2.0-3
+    version: 3.0.1-1
     packages:
-      - snowball-2.2.0-3-x86_64.pkg.tar.zst
-      - libstemmer-2.2.0-3-x86_64.pkg.tar.zst
+      - snowball-3.0.1-1-x86_64.pkg.tar.zst
+      - libstemmer-3.0.1-1-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
