--- a/world/qtcreator/.artixlinux/pkgbase.yaml
+++ b/world/qtcreator/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: qtcreator
-  version: 16.0.1-1
-  arch:
-    - x86_64
-  pkgname:
-    - qtcreator
-    - qtcreator-devel
 actions:
   addRepo: world
   removeRepo: null
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 16.0.1-1
+    version: 16.0.2-1
     packages:
-      - qtcreator-16.0.1-1-x86_64.pkg.tar.zst
-      - qtcreator-devel-16.0.1-1-x86_64.pkg.tar.zst
+      - qtcreator-16.0.2-1-x86_64.pkg.tar.zst
+      - qtcreator-devel-16.0.2-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
