--- a/world/nodejs-lts-jod/.artixlinux/pkgbase.yaml
+++ b/world/nodejs-lts-jod/.artixlinux/pkgbase.yaml
@@ -1,12 +1,5 @@
 ---
 team: world
-pkgbase:
-  name: nodejs-lts-jod
-  version: 22.14.0-2
-  arch:
-    - x86_64
-  pkgname:
-    - nodejs-lts-jod
 actions:
   addRepo: world
   removeRepo: null
@@ -19,37 +12,49 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 22.14.0-2
+    version: 22.15.1-1
     packages:
-      - nodejs-lts-jod-22.14.0-2-x86_64.pkg.tar.zst
+      - nodejs-lts-jod-22.15.1-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
