--- a/world/onnx/.artixlinux/pkgbase.yaml
+++ b/world/onnx/.artixlinux/pkgbase.yaml
@@ -1,13 +1,5 @@
 ---
 team: world
-pkgbase:
-  name: onnx
-  version: 1:1.17.0-5
-  arch:
-    - x86_64
-  pkgname:
-    - onnx
-    - python-onnx
 actions:
   addRepo: world
   removeRepo: null
@@ -20,38 +12,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1:1.17.0-5
+    version: 1:1.18.0-1
     packages:
-      - onnx-1:1.17.0-5-x86_64.pkg.tar.zst
-      - python-onnx-1:1.17.0-5-x86_64.pkg.tar.zst
+      - onnx-1:1.18.0-1-x86_64.pkg.tar.zst
+      - python-onnx-1:1.18.0-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
