--- a/system/fakeroot/.artixlinux/pkgbase.yaml
+++ b/system/fakeroot/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: fakeroot
-  version: 1.37.1.1-1
-  arch:
-    - x86_64
-  pkgname:
-    - fakeroot
 actions:
   addRepo: system
   removeRepo: system-gremlins
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
-    version: 1.37.1.1-1
+    version: 1.37.1.2-1
     packages:
-      - fakeroot-1.37.1.1-1-x86_64.pkg.tar.zst
+      - fakeroot-1.37.1.2-1-x86_64.pkg.tar.zst
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: system
